# Molecular_Discovery

./: .gitignore
mol-discovery/: .env.example  .gitignore  COMPLETE_FRONTEND_FIX_SUMMARY.md  FRONTEND_FIXES.md  FRONTEND_SETUP_COMPLETE.md  INTEGRATION_COMPLETE.md  Makefile  README.md  SUBMISSION.md  TODO.md  docker-compose.yml  moldiscovery_demo.db  package-lock.json  package.json  pyproject.toml  test_trace.db  test_trace2.db  test_trace3.db  test_trace4.db
mol-discovery/.github/workflows/: ci.yml  test.yml
mol-discovery/backend/: alembic.ini  moldiscovery_demo.db  requirements.txt  test_moldiscovery.db
mol-discovery/backend/alembic/: __init__.py  env.py
mol-discovery/backend/app/: main.py
mol-discovery/backend/flows/: discovery_flow.py  feedback_flow.py  scheduled_flows.py
mol-discovery/backend/models/: catalyst_gnn.json  catalyst_gnn.pt  catalyst_gnn_demo_v2.pt  catalyst_gnn_demo_v3.pt  diffusion.json
mol-discovery/backend/scripts/: download_models.py  download_models_fixed.py  download_simulation_models.py  run_feedback_loop.py  seed_database.py
mol-discovery/backend/tests/: test_api.py  test_integration.py  test_ml.py  test_simulation.py
mol-discovery/docker/: Dockerfile.backend  Dockerfile.frontend
mol-discovery/docker/prefect-agent/: Dockerfile
mol-discovery/frontend/: .env.local.example  QUICK_START.md  README.md  START_HERE.md  TAILWIND_SETUP_VERIFIED.md  next.config.js  package.json  tsconfig.json
mol-discovery/notebooks/: train_demo.ipynb
mol-discovery/scripts/: demo_synthetic_data.py  init_db.py  register_flows.py
(+76 files in other folders)
