[tool.poetry]
name = "mol-discovery-backend"
version = "0.1.0"
description = "AI platform for catalyst and enzyme discovery"
authors = ["GPS Renewables <dev@gpsrenewables.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
redis = {extras = ["asyncio"], version = "^5.0.1"}
qdrant-client = "^1.7.0"
neo4j = "^5.16.0"
torch = "^2.1.0"
rdkit-pypi = "^2023.9.6"
sentence-transformers = "^2.2.2"
transformers = "^4.35.0"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
prefect = "^2.14.21"
httpx = "^0.25.2"
python-multipart = "^0.0.6"
loguru = "^0.7.2"
plotly = "^5.17.0"
mlflow = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-httpx = "^0.27.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.5"
black = "^23.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

